--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,14 +7,15 @@
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>My Astro Site</title>
+		<meta name="generator" content={Astro.generator} >
+		<title>My Site - Portfolio</title>
 	</head>
 	<body>
 		<a href="/">Home</a>
 		<a href="/portfolio">Portfolio</a>
 		<a href="/blog">Blog</a>
 		<a href="/useful-links">Useful Links</a>
-		<h1>My Astro Site</h1>
+		<h1>Blog</h1>
+		<h2>A list of blog entries will go here</h2>
 	</body>
 </html>
