--- a/src/pages/useful-links.astro
+++ b/src/pages/useful-links.astro
@@ -15,6 +15,6 @@
 		<a href="/portfolio">Portfolio</a>
 		<a href="/blog">Blog</a>
 		<a href="/useful-links">Useful Links</a>
-		<h1>My Astro Site</h1>
+		<h1>Useful Links</h1>
 	</body>
 </html>
